Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16338

QtC does no longer honor variable substitution in commands

XMLWordPrintable

      In QtC < 4.0.0 I had my project target run working directory set to: %

      {buildDir}/bin, this was working fine.

      Until 4.0.0 that does not longer works and return -1 error.
      Activating the 'execute in a terminal' checkbox shown that QtC try to execute my target in wrong directory:
      Cannot change to working directory "/home/pasnox/Developpement/GitLab/quickstation/quickstation.git/%{buildDir}

      /bin"

        For Gerrit Dashboard: QTCREATORBUG-16338
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            filipe.azevedo Filipe Azevedo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes