RunConfigurationAspect: Re-enable macro substitution

Re-enable macro substitution in work directory of run configurations.

This makes it possible to do %{sourceDir} or %{buildDir} again.

Task-number: QTCREATORBUG-16338
Change-Id: Ifff7831bf3aa0078d13185da5f5e7c6a3be2f852
Reviewed-by: hjk <hjk@theqtcompany.com>